[gd_scene load_steps=27 format=3 uid="uid://bhapy03ndyqo8"]

[ext_resource type="Script" path="res://scene_prefabs/characters/player/player_controller.gd" id="1_nvfm5"]
[ext_resource type="Texture2D" uid="uid://demtv6w3ggw33" path="res://third_party/testing_ground_assets/test_character_spritesheet/MV-SquireStyleOne-Transparent.png" id="2_mr4py"]
[ext_resource type="Script" path="res://scene_prefabs/characters/player/spellcraft_manager.gd" id="3_ckdda"]
[ext_resource type="PackedScene" uid="uid://d3e57kxopdxv5" path="res://scene_prefabs/menus_and_guis/player_hud.tscn" id="4_2or54"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d1o63"]
atlas = ExtResource("2_mr4py")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnuqf"]
atlas = ExtResource("2_mr4py")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_se8kd"]
atlas = ExtResource("2_mr4py")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj3h4"]
atlas = ExtResource("2_mr4py")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_es38j"]
atlas = ExtResource("2_mr4py")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_takae"]
atlas = ExtResource("2_mr4py")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggqhd"]
atlas = ExtResource("2_mr4py")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ix86b"]
atlas = ExtResource("2_mr4py")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnmr8"]
atlas = ExtResource("2_mr4py")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sx2rg"]
atlas = ExtResource("2_mr4py")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vudot"]
atlas = ExtResource("2_mr4py")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_15llf"]
atlas = ExtResource("2_mr4py")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wb88t"]
atlas = ExtResource("2_mr4py")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctv04"]
atlas = ExtResource("2_mr4py")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f57y"]
atlas = ExtResource("2_mr4py")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe5gs"]
atlas = ExtResource("2_mr4py")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmkij"]
atlas = ExtResource("2_mr4py")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_svx54"]
atlas = ExtResource("2_mr4py")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0imcl"]
atlas = ExtResource("2_mr4py")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhyhg"]
atlas = ExtResource("2_mr4py")
region = Rect2(240, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_p7kgc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1o63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnuqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se8kd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj3h4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_es38j")
}],
"loop": true,
"name": &"jump_fall",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_takae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggqhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix86b")
}],
"loop": true,
"name": &"jump_land",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnmr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx2rg")
}],
"loop": true,
"name": &"jump_start",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vudot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15llf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wb88t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctv04")
}],
"loop": true,
"name": &"jump_whole",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f57y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe5gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmkij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svx54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0imcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhyhg")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}, {
"frames": [],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0o7oo"]
size = Vector2(10, 25)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("hud_manager", "spellcrafter")]
z_index = 5
script = ExtResource("1_nvfm5")
hud_manager = NodePath("PlayerHUD")
spellcrafter = NodePath("SpellcraftManager")

[node name="BodySprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -24)
sprite_frames = SubResource("SpriteFrames_p7kgc")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12.5)
shape = SubResource("RectangleShape2D_0o7oo")

[node name="SpellcraftManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_ckdda")

[node name="PlayerHUD" parent="." instance=ExtResource("4_2or54")]
unique_name_in_owner = true
